client/src/css/chat.css
#chatWindow {
    border-radius: 15px;
    background-color: white;
    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
    margin: 25px;
    /* animation: 0.8s slideInUp ease; */
    width: 100vw;
    margin: 25px 0px;
    padding: 25px;
}

#chatSled {
    overflow-x: scroll;
}

.chatCart {
    padding: 0;
    position: relative;
}

.messages {
    border: 1px black solid;
    border-radius: 5px;
    margin: 0;
    box-shadow: 2px 2px 1px grey;
    word-wrap: break-word;
    position: relative;
}


.message-enter {
    transform: translateX(100vw);
  }
  .message-enter-active {
    transform: translateX(0%);
    transition: all 500ms ease-out;
  }
  .message-exit {
    transform: translateY(0%);
  }
  .message-exit-active {
    transform: translateY(-100vw);
    transition: all 500ms ease-out;
  }
  

